kubernetes/observability/thanos/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-receive
  namespace: observability
  annotations:
    external-dns.kubernetes.io/target: gateway.kakatkarakshay.dev
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: thanos-kakatkarakshay-dev-tls
    options:
      name: thanos-mtls
      namespace: observability
  routes:
    - kind: Rule
      match: Host(`thanos.kakatkarakshay.dev`) && PathPrefix(`/api/v1/receive`)
      services:
        - kind: Service
          name: thanos-receive-router
          port: 19291
